--- a/Mobile/SourceCode/ICP9/app/src/main/res/layout/activity_main.xml
+++ b/Mobile/SourceCode/ICP9/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,142 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/black">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context="com.example.vijaya.myorder.MainActivity">
+
+        <EditText
+            android:id="@+id/user_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16sp"
+            android:inputType="textCapWords"
+            android:textColor="#FFF8F8"
+            android:hint="Type your name"
+            android:textColorHint="#0f0"/>
+
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16sp"
+            android:inputType="textCapWords"
+            android:textColor="#FFF8F8"
+            android:hint="Type your Email"
+            android:textColorHint="#0f0"/>
+
+        <TextView
+            style="@style/HeaderTextStyle"
+            android:text="Toppings"
+            android:textColor="#FFF8F8"/>
+
+        <CheckBox
+            android:id="@+id/cheese"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16sp"
+            android:paddingLeft="24dp"
+            android:text="Cheese"
+            android:textSize="16sp"
+            android:textColor="#FFF8F8"
+            android:buttonTint="#FFF8F8"/>
+
+        <CheckBox
+            android:id="@+id/pepperoni"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16sp"
+            android:paddingLeft="24dp"
+            android:text="Pepperoni"
+            android:textSize="16sp"
+            android:textColor="#FFF8F8"
+            android:buttonTint="#FFF8F8"/>
+
+        <CheckBox
+            android:id="@+id/mushrooms"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16sp"
+            android:paddingLeft="24dp"
+            android:text="Mushrooms"
+            android:textSize="16sp"
+            android:textColor="#FFF8F8"
+            android:buttonTint="#FFF8F8"/>
+
+        <CheckBox
+            android:id="@+id/peppers"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16sp"
+            android:paddingLeft="24dp"
+            android:text="Green Bell Peppers"
+            android:textSize="16sp"
+            android:textColor="#FFF8F8"
+            android:buttonTint="#FFF8F8"/>
+        <TextView
+            style="@style/HeaderTextStyle"
+            android:text="Quantity"
+            android:textColor="#FFF8F8"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginRight="8dp"
+                android:onClick="decrement"
+                android:text="-"
+                style="@style/Widget.AppCompat.Button.Colored"/>
+
+            <TextView
+                android:id="@+id/quantity_text_view"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:text="1"
+                android:textColor="#FFF8F8" />
+
+            <Button
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:onClick="increment"
+                android:text="+"
+                style="@style/Widget.AppCompat.Button.Colored"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/orderbtn"
+                android:layout_width="wrap_content"
+                style="@style/Widget.AppCompat.Button"
+                android:layout_height="60dp"
+                android:layout_marginRight="8dp"
+                android:text="Order" />
+            <!--            android:onClick="sendEmail"-->
+
+            <Button
+                android:id="@+id/summarybtn"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:onClick="submitOrder"
+                android:text="Summary"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
