--- a/Mobile/SourceCode/ICP9/app/src/main/res/values/colors.xml
+++ b/Mobile/SourceCode/ICP9/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="ColorRed">#b20000</color>
+    <color name="ColorY">#e6e600</color>
+    <color name="Colorwhite">#ffff</color>
+    <color name="black">#000000</color>
 </resources>
